added link function to custom directive to change color on mouseover

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
 <!-- Change Me -->
 <body ng-controller='directiveController as DC'>
   {{DC.title}}
+  <div background-directive style="background-color: purple" color='#00ff9a'>Hello World!</div>
+  <div background-directive style="background-color: indigo" color='#ff009a'>Hello World!</div>
+  <div background-directive style="background-color: blue" color='#ff9a00'>Hello World!</div>
+  <div background-directive style="background-color: green" color='#9aff00'>Hello World!</div>
+  <div background-directive style="background-color: yellow" color='#9a00ff'>Hello World!</div>
+  <div background-directive style="background-color: orange" color='#9a2aef'>Hello World!</div>
+  <div background-directive style="background-color: red" color='#3443ff'>Hello World!</div>
+
+
 </body>
 </html>
